# test-dh-mcp

./: README.md  deephaven_workers.json  pyproject.toml  requirements.txt
src/: mcp_client.py  mcp_server.py  run_deephaven_client.py  run_deephaven_server.py
src/dhmcp/: __init__.py  _config.py  _sessions.py  server.py  tools.py
